--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
 
-    <link rel="icon" type="image/png" href="/assets/img/logo pladis.png" />
+    <link rel="icon" type="image/png" href="/assets/img/logo udp.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Admin Platform Disleksia</title>
+    <title>Admin Unity Disleksia Platform</title>
     <meta
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no"
       name="viewport"
